<resources>
  <string name="version">v1.2.7</string>
  <string name="app_name">APlayer</string>
  <string name="tab_song">Songs</string>
  <string name="tab_album">Albums</string>
  <string name="tab_artist">Artists</string>
  <string name="tab_playlist">Playlists</string>
  <string name="tab_folder">Folders</string>
  <string name="tab_genre">Genres</string>
  <string name="tab_remote">Remote</string>
  <string name="tab_smb">SMB</string>
  <string name="drawer_song">Song Library</string>
  <string name="drawer_recently_add">Recently Added</string>
  <string name="drawer_folder">Folder</string>
  <string name="drawer_setting">Settings</string>
  <string name="drawer_history">Playback History</string>
  <string name="from_aplayer">From APlayer</string>
  <string name="about">About APlayer</string>
  <string name="model_random">Shuffle</string>
  <string name="model_repeat">Repeat</string>
  <string name="model_normal">Loop</string>
  <string name="unknown_song">Unknown song</string>
  <string name="unknown_artist">Unknown artist</string>
  <string name="unknown_album">Unknown album</string>
  <string name="eq_initial_failed">Equalizer initialization failed</string>
  <string name="use_eq">Use equalizer</string>
  <string name="plz_earphone">Please plug in headphones</string>
  <string name="back">Back</string>
  <string name="about_feedback_title">Opinions and feedback</string>
  <string name="about_github_title">GitHub</string>
  <string name="about_github_subtitle">View source code</string>
  <string name="about_release_title">Release history</string>
  <string name="about_release_subtitle">Browse all published versions</string>
  <string name="about_feedback_subtitle">Report bugs and suggestions</string>
  <string name="about_share_subtitle">Share with friends</string>
  <string name="about_privacy_title">Privacy policy</string>
  <string name="about_privacy_subtitle">Read our privacy policy</string>
  <string name="about_rate_title">Rate app</string>
  <string name="about_rate_subtitle">Give us 5 stars</string>
  <string name="about_share_message">Check out APlayer, a great music player! %1$s</string>
  <string name="about_share_chooser">Share APlayer</string>
  <string name="my_favorite">My favorites</string>
  <string name="list_is_empty">The list is empty</string>
  <string name="folder">Folder</string>
  <string name="recently">Recently Added</string>
  <string name="continue_play">Resume</string>
  <string name="pause_play">Pause</string>
  <string name="no_song">No song</string>
  <string name="share_error">Failed to share</string>
  <string name="share_success">Share success</string>
  <string name="share_cancel">Share cancel</string>
  <string name="plz_input_sharecontent">Please enter sharing content</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <string name="new_playlist">Create new playlist</string>
  <string name="create">Create</string>
  <string name="input_playlist_name">Please enter the playlist name</string>
  <string name="song_lose_effect">Current song is not available</string>
  <string name="add_playlist_success">New playlist successfully created</string>
  <string name="add_playlist_error">Failed to create new playlist</string>
  <string name="playlist_already_exist">The playlist already exists</string>
  <string name="more">More</string>
  <string name="select_all">Select all</string>
  <string name="add_error">Failed to add</string>
  <string name="add_to_playlist">Add to playlist</string>
  <string name="add_song_playlist_success">Add %1$d songs to %2$s</string>
  <string name="delete_multi_song">Remove %d songs</string>
  <string name="add_song_playqueue_success">Add %1$d songs into playing queue</string>
  <string name="add_song_playlist_error">Failed to add songs to the playlist</string>
  <string name="load_playlist_error">Failed to load playlist</string>
  <string name="confirm_delete_from_playlist_or_library">Confirm to remove from %s?</string>
  <string name="delete_success">Remove successfully</string>
  <string name="delete_error">Failed to remove</string>
  <string name="set_ringtone_success">Successfully set as ringtone</string>
  <string name="set_ringtone_error">Failed to set as ringtone</string>
  <string name="set_success">Successfully set</string>
  <string name="plz_set_correct_time">Please set the correct time</string>
  <string name="cancel_success">Cancel success</string>
  <string name="play_random">Shuffle all(%d)</string>
  <string name="scan_tip">Songs and audio clips smaller than this duration will be excluded from scanning</string>
  <string name="search_hint">Search song  artist  album</string>
  <string name="no_search_result">No result</string>
  <string name="create_playlist">Create playlist...</string>
  <string name="use_system_color">Use system background color</string>
  <string name="use_black_color">Use black background color</string>
  <string name="play_queue">Playing queue(%d)</string>
  <string name="choose_song">Choose songs</string>
  <string name="choose_no_song">No songs selected</string>
  <string name="set_album_cover_error">Failed to set album cover</string>
  <string name="set_artist_cover_error">Failed to set artist cover</string>
  <string name="set_playlist_cover_error">Failed to set playlist cover</string>
  <string name="new_folder">New folder</string>
  <string name="choose_folder">Choose</string>
  <string name="setting_success">Set successfully</string>
  <string name="setting_error">Set failed</string>
  <string name="search_error">Search failed</string>
  <string name="song_not_empty">Song name cannot be empty</string>
  <string name="save_success">Save successfully</string>
  <string name="save_error">Save failed</string>
  <string name="save_error_arg">Save failed: %s</string>
  <string name="arg_illegal">Invalid parameter: %d</string>
  <string name="send_success">Sent successfully.Thank you for the feedback!</string>
  <string name="send_error">Sent failed: %s</string>
  <string name="screenshot_save_at">The screenshot has been saved to %s</string>
  <string name="select_image">Select Image</string>
  <string name="clear_cover">Clear Cover</string>
  <string name="not_install_weibo">You haven\'t install Weibo </string>
  <string name="create_dir_error">Failed to create directory</string>
  <string name="need_permission">App needs necessary permissions to perform the requested action</string>
  <string name="play_now">Playing: %s</string>
  <string name="default_lrc_path">Scan all lyrics files by default</string>
  <string name="lrc_tip">%s</string>
  <string name="cache_size">%1$2.2f MB</string>
  <string name="confirm_clear_cache">Confirm to clear cache?</string>
  <string name="mylove_cant_edit">My favorites is not editable</string>
  <string name="error">Error</string>
  <string name="share_to">Share to</string>
  <string name="qq">QQ</string>
  <string name="weibo">Weibo</string>
  <string name="wechat">Wechat</string>
  <string name="circlefriend">Moments</string>
  <string name="record_share">Share as poster</string>
  <string name="share">Share</string>
  <string name="timer">Fall Asleep to Music</string>
  <string name="as_default">Set as default</string>
  <string name="close">Close</string>
  <string name="timer_default_info_title">"Sleep Timer" (Set a default time to close app)</string>
  <string name="timer_default_info_content">"Sleep Timer" *After choosing the default time, tapping the sleep timer icon will directly toggle the countdown timer. \n\nTo change the timer value set by default, double tap the icon.</string>
  <string name="timer_pending_close">Play last song til finished</string>
  <string name="input_feedback_content">Please enter your feedback</string>
  <string name="playing">Now playing</string>
  <string name="set_filter_size">Exclude small duration files</string>
  <string name="delete">Remove</string>
  <string name="ring">Ringtone</string>
  <string name="join">Add</string>
  <string name="update_error">Failed to update: %s</string>
  <string name="update_ignore">Ignore update for current version</string>
  <string name="no_update">Current version is the newest</string>
  <string name="search">Search</string>
  <string name="timer_close">Sleep timer</string>
  <string name="feedback_contact_hint">Please enter your contact information</string>
  <string name="lrc_choose">Choose the source of the lyrics</string>
  <string name="song_detail">Song details</string>
  <string name="song_edit">Tag editor</string>
  <string name="common">Common</string>
  <string name="setting_common_desc">Scan, language and general behavior</string>
  <string name="ui_font_size">Interface font size</string>
  <string name="ui_font_size_preview">Preview text</string>
  <string name="lrc">Lyrics</string>
  <string name="setting_lyric_desc">Desktop, status bar and lyric source</string>
  <string name="music_filter">Filter</string>
  <string name="lrc_scan">Lyrics scan path</string>
  <string name="lockscreen_show">Lock-Screen settings</string>
  <string name="manual_scan">Manual scan</string>
  <string name="lrc_priority">Priority of lyrics search</string>
  <string name="lrc_priority_tip">Configure priority of lyrics search (long press and drag to sort)</string>
  <string name="navigation_color">Colored navigation bar</string>
  <string name="navigation_is_show">Colorize navigation bar</string>
  <string name="shake">Shake</string>
  <string name="shake_tip">Shake to change song</string>
  <string name="color">Colors</string>
  <string name="setting_color_desc">Theme colors and appearance</string>
  <string name="setting_play_desc">Playback, focus and fade behavior</string>
  <string name="audio_decoder_mode">Audio decoder</string>
  <string name="audio_decoder_mode_tip">If some songs play abnormally, try switching to "Use FFmpeg" and restart the app</string>
  <string name="audio_decoder_mode_default">Default</string>
  <string name="audio_decoder_mode_ffmpeg">Use FFmpeg</string>
  <string name="setting_library_desc">Library display and sorting</string>
  <string name="setting_playing_screen_desc">Now playing layout and behavior</string>
  <string name="setting_cover_desc">Artwork and cover download options</string>
  <string name="setting_notification_desc">Notification style and controls</string>
  <string name="primary_color">Primary color</string>
  <string name="support_develop">Support development</string>
  <string name="sleep_timer">Sleep timer</string>
  <string name="eq">Equalizer</string>
  <string name="collect">Add to my favorites</string>
  <string name="song_path">File path: </string>
  <string name="song_name">File name: </string>
  <string name="file_size">Size: </string>
  <string name="format">Format: </string>
  <string name="length">Length: </string>
  <string name="bitrate">Bitrate: </string>
  <string name="sample_rate">Sample Rate: </string>
  <string name="loading">Loading</string>
  <string name="add_to_play_queue">Add to playing queue</string>
  <string name="set_album_cover">Set album cover</string>
  <string name="add_to_next_song">Play next</string>
  <string name="sort_order">Sort</string>
  <string name="album">Album</string>
  <string name="album_desc">Album desc</string>
  <string name="title">Title</string>
  <string name="title_desc">Title desc</string>
  <string name="display_title">File name</string>
  <string name="display_title_desc">File name desc</string>
  <string name="artist">Artist</string>
  <string name="artist_desc">Artist desc</string>
  <string name="name">Title</string>
  <string name="name_desc">Title desc</string>
  <string name="create_time">Create time </string>
  <string name="lyric">Lyrics settings</string>
  <string name="exit">Exit</string>
  <string name="speed">Play speed</string>
  <string name="alias">Alias</string>
  <string name="account">Account</string>
  <string name="pwd">Password</string>
  <string name="webdav_hint_server">Server</string>
</resources>