<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:title="@string/sort_order"
    android:id="@+id/action_sort_order"
    android:icon="@drawable/ic_sort_white_24dp"
    app:showAsAction="ifRoom">
    <menu>
      <group android:checkableBehavior="single">
        <item
          android:title="@string/title"
          android:id="@+id/action_sort_order_title"/>
        <item
          android:title="@string/title_desc"
          android:id="@+id/action_sort_order_title_desc"/>
        <item
          android:title="@string/display_title"
          android:id="@+id/action_sort_order_display_title"/>
        <item
          android:title="@string/display_title_desc"
          android:id="@+id/action_sort_order_display_title_desc"/>
        <item
          android:title="@string/album"
          android:id="@+id/action_sort_order_album"/>
        <item
          android:title="@string/album_desc"
          android:id="@+id/action_sort_order_album_desc"/>
        <item
          android:title="@string/artist"
          android:id="@+id/action_sort_order_artist"/>
        <item
          android:title="@string/artist_desc"
          android:id="@+id/action_sort_order_artist_desc"/>
        <item
          android:title="@string/date"
          android:id="@+id/action_sort_order_date"/>
        <item
          android:title="@string/date_desc"
          android:id="@+id/action_sort_order_date_desc"/>
        <!--<item android:title="@string/duration" android:id="@+id/action_sort_order_duration"/>-->
        <!--<item android:title="@string/year" android:id="@+id/action_sort_order_year"/>-->
      </group>
    </menu>
  </item>
  <item
    android:id="@+id/action_timer"
    android:icon="@drawable/ic_timer_white_24dp"
    android:title="@string/timer_close"
    android:orderInCategory="80"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/action_search"
    android:icon="@drawable/ic_search_white_24dp"
    android:title="@string/search"
    android:orderInCategory="90"
    app:showAsAction="ifRoom"/>

</menu>