<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/sort_order" android:id="@+id/action_sort_order"  android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/name" android:id="@+id/action_sort_order_playlist_name" />
                <item android:title="@string/name_desc" android:id="@+id/action_sort_order_playlist_name_desc"/>
                <item android:title="@string/create_time" android:id="@+id/action_sort_order_create_time"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_timer" android:icon="@drawable/act_btn_timer"
        android:title="@string/timer_close" android:orderInCategory="80" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search" android:icon="@drawable/act_btn_search"
        android:title="@string/search" android:orderInCategory="90" app:showAsAction="ifRoom" />

</menu>