<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/song_path"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_path"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/song_name"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/file_size"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_size"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/format"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_mime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/loading"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/length"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bitrate"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_bit_rate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/loading"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:orientation="horizontal">
    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sample_rate"
      android:textSize="@dimen/s16_size" />
    <TextView
      android:id="@+id/song_detail_sample_rate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/loading"
      android:textIsSelectable="true"
      android:textSize="@dimen/s16_size" />
  </LinearLayout>

</LinearLayout>