<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d56_size"
        android:background="?attr/material_color_primary">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/d16_size"
            android:text="@string/cancel"
            android:textSize="@dimen/s14_size"
            android:textColor="@color/night_textcolor_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip"
            android:layout_centerInParent="true"
            android:text="@string/choose_song"
            android:textSize="@dimen/s16_size"
            android:textColor="@color/night_textcolor_primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/d16_size"
            android:text="@string/confirm"
            android:textSize="@dimen/s14_size"
            android:textColor="@color/night_textcolor_primary" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d8_size"
        android:background="?attr/background_color_2"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>