<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/alias_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:hint="@string/alias">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:textColor="?attr/text_color_primary" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/account_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:hint="@string/account">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:textColor="?attr/text_color_primary" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/pwd_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:hint="@string/pwd">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:textColor="?attr/text_color_primary" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/server_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/d18_size"
    android:hint="@string/webdav_hint_server">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionDone"
      android:textColor="?attr/text_color_primary" />
  </com.google.android.material.textfield.TextInputLayout>

<!--  <com.google.android.material.textfield.TextInputLayout-->
<!--    android:id="@+id/path_layout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginTop="@dimen/d18_size"-->
<!--    android:hint="@string/webdav_hint_path">-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:imeOptions="actionDone"-->
<!--      android:textColor="?attr/text_color_primary" />-->
<!--  </com.google.android.material.textfield.TextInputLayout>-->
</LinearLayout>