<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:background="@color/background_color_3">
        <TextView
            android:id="@+id/tab_song"
            style="@style/CustomTab"
            android:text="@string/tab_song"
            android:textColor="@color/text_allsong_sel"/>
        <TextView
            android:id="@+id/tab_album"
            style="@style/CustomTab"
            android:text="@string/tab_album"/>
        <TextView
            android:id="@+id/tab_artist"
            style="@style/CustomTab"
            android:text="@string/tab_artist"/>
        <TextView
            android:id="@+id/tab_playlist"
            style="@style/CustomTab"
            android:text="@string/tab_dir"/>
    </LinearLayout>
    <!-- Tab分割线-->
    <ImageView
        android:id="@+id/tab_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tab_indicator"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/background_color_interval"
        android:orientation="horizontal"
        android:onClick="onPlayShuffle">
        <ImageButton
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_common_play_shuffle"
            android:layout_marginLeft="16dp" />
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="随进播放全部"
            android:layout_marginLeft="72dp"/>
    </RelativeLayout>

    <!--中间四个fragment-->
    <remix.myplayer.ui.MyPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ViewPager" />

    <!--
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/ViewPager" />
        -->
</LinearLayout>